manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-dev
  namespace: development
  annotations:

  # Ingress Core Settings  
    #kubernetes.io/ingress.class: "alb"
    #alb.ingress.kubernetes.io/load-balancer-name: wordpress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
    #alb.ingress.kubernetes.io/tags: Environment=dev,Team=app
    # Group name
    alb.ingress.kubernetes.io/group.name: wordpress-tgb

    # Rule for forward request 
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      redirect:
        port: '443'
        protocol: HTTPS
    # alb.ingress.kubernetes.io/actions.forward-to-tg: >
    #   forward:
    #     targetGroups:
    #     - targetGroupArn: arn:aws:elasticloadbalancing:ap-south-1:187451058634:targetgroup/wpsite20230429135729496200000001/78b5b5ac433555ff
    #       weight: 50
    #     - targetGroupArn: arn:aws:elasticloadbalancing:ap-south-1:187451058634:targetgroup/green20230429135729673800000002/3f0c1663307e9ed7
    #       weight: 50
    alb.ingress.kubernetes.io/actions.default-action: redirect-to-https

    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    # wordpress application health check
    # alb.ingress.kubernetes.io/healthcheck-path: /wp-admin/install.php
    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    # alb.ingress.kubernetes.io/success-codes: '302'
    # alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    # alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[ {"HTTP":80} , {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:187451058634:certificate/b8520d8f-6ac9-4df1-a239-ba9e4dd7aed7
        
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)  
    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'   

    # dashboard configuration
    # nginx.ingress.kubernetes.io/rewrite-target: /

    # kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/target-type: instance
    #cert-manager.io/cluster-issuer: wordpress-dev

    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    # nginx.ingress.kubernetes.io/fastcgi_send_timeout: "1800"
    # nginx.ingress.kubernetes.io/fastcgi_read_timeout: "1800"
    # nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    # nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    # nginx.ingress.kubernetes.io/fastcgi-params-configmap: "development/word-cm"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #   location ~ \.php$ {
    #           try_files $uri =404;
    #           fastcgi_split_path_info ^(.+\.php)(/.+)$;
    #           fastcgi_pass wordpress-site:9000;
    #           fastcgi_index index.php;
    #           include fastcgi_params;
    #           fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
    #           fastcgi_param PATH_INFO $fastcgi_path_info;
    #   }
spec:
  ingressClassName: alb
  rules:
  - host: narola.ws
    http:
      paths:
      # - pathType: Prefix
      #   path: "/"
      #   backend:
      #     service:
      #       name: wordpress-site
      #       port:
      #         number: 80
      # - pathType: Prefix
      #   path: "/"
      #   backend:
      #     service:
      #       name: wordpress-site
      #       port:
      #         number: 80
      - path: "/green"
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 80
  # - host: dashboard.narola.ws
  #   http:
  #     paths:
  #     - path: "/"
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: kubernetes-dashboard
  #           port:
  #             number: 80
          
  tls:
  - hosts:
    - narola.ws
    secretName: wordpress-dev
